# hegemony-inventory-plugins

./: .commitlintrc.yaml  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSING.md  README.md  REUSE.toml  Taskfile.yml  pyproject.toml
.github/workflows/: ci.yml  release.yml
plugins/inventory_git/: README.md  pyproject.toml
plugins/inventory_git/examples/devices/: core-switch-1.yaml  edge-router-1.yaml
plugins/inventory_git/examples/sites/emea/: emea.yaml
plugins/inventory_git/examples/sites/emea/nl/: ams01.yaml  nl.yaml
plugins/inventory_git/src/hegemony_inventory_git/: __init__.py  config.py  inventory_schema.py  loader.py  provider.py  query.py
plugins/inventory_infrahub/: README.md  pyproject.toml
plugins/inventory_infrahub/src/hegemony_inventory_infrahub/: __init__.py  config.py  provider.py
plugins/inventory_netbox/: README.md  pyproject.toml
plugins/inventory_netbox/src/hegemony_inventory_netbox/: __init__.py  config.py  provider.py
scripts/: build_wheels.py  package_paths.py  set_version.py  smoke_install_wheels.py  verify_release_version.py
tests/: __init__.py  inventory_fakes.py  test_release_metadata.py
tests/api/: test_git_inventory_examples.py  test_git_inventory_provider.py  test_infrahub_inventory_provider.py  test_netbox_inventory_provider.py
