# SPDX-FileCopyrightText: 2025-2026 Jakub Travnik <jakub.travnik@gmail.com>
#
# SPDX-License-Identifier: AGPL-3.0-or-later

[project]
name = "hegemony-inventory-plugins-workspace"
version = "0.1.0"
description = "Workspace for Hegemony inventory SDK and provider plugin wheels"
readme = "README.md"
license = { text = "AGPL-3.0-or-later" }
requires-python = ">=3.11"
dependencies = []

[dependency-groups]
dev = [
    "httpx>=0.27.0",
    "pre-commit>=3.8.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=0.23.0",
    "pyyaml>=6.0.0",
    "reuse>=6.2.0",
    "ruff>=0.14.13",
    "ty>=0.0.14",
]

[tool.uv]
package = false

[tool.uv.workspace]
members = [
    "packages/inventory_sdk",
    "plugins/inventory_netbox",
    "plugins/inventory_infrahub",
    "plugins/inventory_git",
]

[tool.uv.sources]
hegemony-inventory-sdk = { workspace = true }
hegemony-inventory-netbox = { workspace = true }
hegemony-inventory-infrahub = { workspace = true }
hegemony-inventory-git = { workspace = true }

[tool.ruff]
target-version = "py311"
line-length = 100
exclude = [
    ".venv",
    "build",
    "dist",
    "__pycache__",
]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = [
    "E501",
    "UP042",  # Keep SDK enums as str+Enum to preserve the copied public contract.
]

[tool.ruff.lint.isort]
combine-as-imports = true
known-first-party = [
    "hegemony_inventory_sdk",
    "hegemony_inventory_netbox",
    "hegemony_inventory_infrahub",
    "hegemony_inventory_git",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]

[tool.ty.environment]
python-version = "3.11"

[tool.ty.src]
include = ["packages", "plugins", "tests", "scripts"]
exclude = [
    "**/__pycache__",
    ".venv",
    "dist",
    "build",
]

[tool.ty.rules]
possibly-unresolved-reference = "error"
possibly-missing-import = "error"
possibly-missing-attribute = "error"
deprecated = "error"
unused-ignore-comment = "error"
redundant-cast = "warn"

[tool.ty.terminal]
output-format = "full"
error-on-warning = true

[[tool.ty.overrides]]
include = ["**/tests/**", "**/test_*.py"]

[tool.ty.overrides.rules]
possibly-unresolved-reference = "warn"
possibly-missing-attribute = "warn"
