# SPDX-FileCopyrightText: 2025-2026 Jakub Trávník <jakub.travnik@gmail.com>
#
# SPDX-License-Identifier: AGPL-3.0-or-later

[project]
name = "hegemony-inventory-netbox"
version = "0.1.0"
description = "NetBox inventory provider plugin for Hegemony"
license = { text = "AGPL-3.0-or-later" }
requires-python = ">=3.11"
dependencies = ["hegemony-inventory-sdk==0.1.0", "httpx>=0.27.0"]

[project.entry-points."hegemony.inventory_plugins"]
netbox = "hegemony_inventory_netbox:register"

[build-system]
requires = ["uv_build>=0.9,<0.12"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "hegemony_inventory_netbox"
module-root = "src"
